--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "repository": "https://github.com/itacirgabral/motte",
   "license": "MIT",
   "scripts": {
-    "start": "npx nodemon -r dotenv/config ./src/index.js"
+    "dev": "npx nodemon --watch .src/ -r dotenv/config ./src/index.js",
+    "debug": "npx nodemon --inspect=0.0.0.0:9229 --watch .src/ -r dotenv/config ./src/index.js",
+    "start": "node -r dotenv/config ./src/index.js"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
