--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "@adiwajshing/baileys": "^3.2.2",
     "apollo-server": "^2.18.2",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0"
