--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "https://github.com/itacirgabral/motte",
   "license": "MIT",
   "scripts": {
-    "dev": "npx nodemon --watch .src/ -r dotenv/config ./src/index.js",
-    "debug": "npx nodemon --inspect=0.0.0.0:9229 --watch .src/ -r dotenv/config ./src/index.js",
+    "dev": "npx nodemon --watch ./src/ -r dotenv/config ./src/index.js",
+    "debug": "npx nodemon --inspect=0.0.0.0:9229 --watch ./src/ -r dotenv/config ./src/index.js",
     "start": "node -r dotenv/config ./src/index.js"
   },
   "devDependencies": {
