--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@adiwajshing/baileys": "^3.2.2",
     "apollo-server": "^2.18.2",
     "dotenv": "^8.2.0",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "ioredis": "^4.19.2"
   }
 }
