--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 HOST_IP=0.0.0.0
 HOST_PORT=4000
 REDIS_CONN=redis://username:password@host:port/db
+BRITO_BRIDGE=ws://localhost:3333/adonis-ws?token=xxx.yyy.zzz
