remove adonis client

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ HOST_IP=0.0.0.0
 HOST_PORT=4000
 REDIS_CONN=redis://username:password@host:port/db
 BRITO_BRIDGE=ws://localhost:3333/adonis-ws?token=xxx.yyy.zzz
+SHARD=petzap
