--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-HOST_IP=0.0.0.0
-HOST_PORT=4000
 REDIS_CONN=redis://username:password@host:port/db
-BRITO_BRIDGE=ws://localhost:3333/adonis-ws?token=xxx.yyy.zzz
-SHARD=petzap
+SHARD=556511112222
