--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@adiwajshing/baileys": "^3.3.1",
     "dotenv": "^8.2.0",
-    "ioredis": "^4.19.2"
+    "ioredis": "^4.19.2",
+    "node-fetch": "^2.6.1"
   }
 }
