--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@adiwajshing/baileys": "^3.3.1",
     "dotenv": "^8.2.0",
     "ioredis": "^4.19.2",
+    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1"
   }
 }
